[gd_scene load_steps=11 format=2]

[ext_resource path="res://Container.gd" type="Script" id=1]
[ext_resource path="res://Area2D.gd" type="Script" id=2]
[ext_resource path="res://Ball.gd" type="Script" id=3]
[ext_resource path="res://assets/portal.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 37.9938

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1136.91, 10.532 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.5753, 539.127 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.575, 533.957 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1136.91, 10.5323 )

[sub_resource type="CircleShape2D" id=6]
radius = 48.8362

[node name="Game" type="Node2D"]

[node name="Container" type="Container" parent="."]
margin_right = 2240.0
margin_bottom = 1080.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Container"]
script = ExtResource( 2 )

[node name="Ball" type="RigidBody2D" parent="Container/Area2D"]
position = Vector2( 100, 100 )
mass = 10.0
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="BallCollision" type="CollisionShape2D" parent="Container/Area2D/Ball"]
position = Vector2( 1.29706, 2.41553 )
shape = SubResource( 1 )

[node name="Walls" type="KinematicBody2D" parent="Container/Area2D"]
collision/safe_margin = 20.767

[node name="BottomCollision" type="CollisionShape2D" parent="Container/Area2D/Walls"]
position = Vector2( 1120.91, 1079.28 )
shape = SubResource( 2 )

[node name="LeftCollision" type="CollisionShape2D" parent="Container/Area2D/Walls"]
position = Vector2( -13.5877, 538.09 )
shape = SubResource( 3 )

[node name="RightCollision" type="CollisionShape2D" parent="Container/Area2D/Walls"]
position = Vector2( 2248.99, 539.27 )
shape = SubResource( 4 )

[node name="TopCollision" type="CollisionShape2D" parent="Container/Area2D/Walls"]
position = Vector2( 1117.71, -9.55308 )
shape = SubResource( 5 )

[node name="PortalCollisionShape" type="CollisionShape2D" parent="Container/Area2D"]
position = Vector2( 1743.81, 992.865 )
shape = SubResource( 6 )

[node name="VictoryText" type="RichTextLabel" parent="Container/Area2D"]
modulate = Color( 1, 1, 0, 1 )
self_modulate = Color( 1, 1, 0, 1 )
margin_left = 1050.0
margin_top = 350.0
margin_right = 1125.0
margin_bottom = 370.0
rect_scale = Vector2( 2, 2 )
text = "VICTORY !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="Container/Area2D"]
margin_left = 1026.03
margin_top = 388.486
margin_right = 1181.03
margin_bottom = 445.486
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Container"]

[node name="TimerText" type="RichTextLabel" parent="Container"]
modulate = Color( 1, 1, 0, 1 )
self_modulate = Color( 1, 1, 0, 1 )
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
text = "time"

[node name="portal" type="Sprite" parent="Container"]
position = Vector2( 1747.37, 990.487 )
scale = Vector2( 2.04055, 1.96623 )
texture = ExtResource( 4 )

[connection signal="button_down" from="Container/Area2D/RestartButton" to="Container/Area2D" method="_on_RestartButton_button_down"]
[connection signal="timeout" from="Container/Timer" to="Container" method="_on_Timer_timeout"]
